
October 4th:

1  - Added autoResponseOnHeal code
2  - Changed avoidGM method to disconnect on sight of GM AND avoid.txt
[ TESTED - AvoidGM works with people in avoid.txt wonderfully ]


3  - Added "Monster attacks: ()" bug fix (http://skore.sourceforge.net/phpBB2/viewtopic.php?t=2131&start=0&postdays=0&postorder=asc&highlight=)
4  - Made new script: fld2xbm.pl  (converts .fld to .xbm, necessary for new maps in mapview)
5  - Updated portals.txt, maps.txt, cities.txt, portalsLOS.txt, Maps folder, responses.txt, and config.txt
6  - Made a skore-revamped.rar containing EVERYTHING you need to get the bot working except a configured config.txt file

--[ Done for the night. ]--

October 8th:

1  - Added 01AC unparsed packet
2  - Added Weight overflow fix 

--[ Done for the night. ]--

October 8th:

1  - Added 016A & 0148 unparsed packets
2  - Fixed bug where bot would disconnect if GM would send a broadcast message
3  - Added length checker for every packet in the bot
4  - Added packet debugger found here (http://kore.sourceforge.net/phpBB2/viewtopic.php?t=2964&start=0&postdays=0&postorder=asc&highlight=)

--[ Done for the night. ]--

-------------------------------------------------------------------------------------
Uploaded updated skore-revamped
-------------------------------------------------------------------------------------

October 9th:

1  - Added 013B unparsed packet
2  - Added 0128 unparsed packet

-------------------------------------------------------------------------------------
Still Alive Guys
-------------------------------------------------------------------------------------

October 23rd:

1  - Updated Anti-KS logic (http://skore.sourceforge.net/phpBB2/viewtopic.php?t=1820)
2  - Added following unparsed packets: 01AD, 01CB, 01B6, 01E0, 0157, 018C, 0182, 01BF
3  - Applied 1 and 2 to kRO version

November 7th:

1  - Updated mapview to display HP/SP/Name/etc - from junq
2  - Added Auto-Heal NPC code